--- a/ProjetJava/ProjetJava/src/main/resources/templates/project-list.html
+++ b/ProjetJava/ProjetJava/src/main/resources/templates/project-list.html
@@ -15,8 +15,8 @@
     <tr th:each="proj : ${data}">
         <td th:text="${proj.id}"></td>
         <td th:text="${proj.nom}"></td>
-        <td th:text="${proj.description}"></td>
-        <td th:text="${proj.user.lastName}"></td>
+        <td th:text="${proj.TasksP}"></td>
+        <td th:text="${proj.worker}"></td>
     </tr>
 </table>
 </body>
