--- a/ProjetJava/ProjetJava/src/main/resources/templates/tasks-list.html
+++ b/ProjetJava/ProjetJava/src/main/resources/templates/tasks-list.html
@@ -16,7 +16,7 @@
         <td th:text="${task.id}"></td>
         <td th:text="${task.nom}"></td>
         <td th:text="${task.description}"></td>
-        <td th:text="${task.user}"></td>
+        <td th:text="${task.users}"></td>
     </tr>
 </table>
 </body>
