--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,24 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Login - Flexor Bootstrap Theme</title>
+  <title>Login</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
-
-  <!-- Facebook Opengraph integration: https://developers.facebook.com/docs/sharing/opengraph -->
-  <meta property="og:title" content="">
-  <meta property="og:image" content="">
-  <meta property="og:url" content="">
-  <meta property="og:site_name" content="">
-  <meta property="og:description" content="">
-
-  <!-- Twitter Cards integration: https://dev.twitter.com/cards/  -->
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="">
-  <meta name="twitter:title" content="">
-  <meta name="twitter:description" content="">
-  <meta name="twitter:image" content="">
 
   <!-- Fav and touch icons -->
   <link rel="shortcut icon" href="img/icons/favicon.png">
@@ -44,14 +30,7 @@
   <link href="css/style.css" rel="stylesheet">
 
   <!--Your custom colour override - predefined colours are: colour-blue.css, colour-green.css, colour-lavander.css, orange is default-->
-  <link href="#" id="colour-scheme" rel="stylesheet">
-
-  <!-- =======================================================
-    Theme Name: Flexor
-    Theme URL: https://bootstrapmade.com/flexor-free-multipurpose-bootstrap-template/
-    Author: BootstrapMade.com
-    Author URL: https://bootstrapmade.com
-  ======================================================= -->
+  <link href="css/colour-green.css" id="colour-scheme" rel="stylesheet">
 
 </head>
 
@@ -59,21 +38,10 @@
 
 <body class="fullscreen-centered page-login">
   <!--Change the background class to alter background image, options are: benches, boots, buildings, city, metro -->
-  <div id="background-wrapper" class="benches" data-stellar-background-ratio="0.8">
+  <div id="background-wrapper" class="leaveswhite" data-stellar-background-ratio="0.8">
 
     <!-- ======== @Region: #content ======== -->
     <div id="content">
-      <div class="header">
-        <div class="header-inner">
-          <!--navbar-branding/logo - hidden image tag & site name so things like Facebook to pick up, actual logo set via CSS for flexibility -->
-          <a class="navbar-brand center-block" href="index.html" title="Home">
-            <h1 class="hidden">
-                <img src="img/logo.png" alt="Flexor Logo">
-                Flexor
-              </h1>
-          </a>
-        </div>
-      </div>
       <div class="row">
         <div class="col-sm-6 col-sm-offset-3">
           <div class="panel panel-default">
@@ -106,16 +74,6 @@
                   <input class="btn btn-lg btn-primary btn-block" type="submit" value="Login">
                 </fieldset>
               </form>
-              <p class="m-b-0 m-t">Not signed up? <a href="register.html">Sign up here</a>.</p>
-              <div class="credits">
-            <!--
-              All the links in the footer should remain intact.
-              You can delete the links only if you purchased the pro version.
-              Licensing information: https://bootstrapmade.com/license/
-              Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Flexor
-            -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-          </div>
             </div>
           </div>
         </div>
