--- a/src/main/resources/templates/projet.html
+++ b/src/main/resources/templates/projet.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Dashboard</title>
+  <title>Projet</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -39,131 +39,145 @@
   <div id="background-wrapper" class="leaveswhite" data-stellar-background-ratio="0.8">
 
   <!-- ======== @Region: #content ======== -->
-  <div id="content">
-    <!-- Mission Statement  block-bg-noise -->
-    <div class="mission text-center block block-pd-sm block-bg-noise">
-      <div class="container">
-        <h2 class="text-shadow-white">
-            Dashboard
-            <a href="about.html" class="btn btn-more"><i class="fa fa-plus"></i>Ajouter un projet</a>
-          </h2>
+      <div class="block-contained">
+          <h1 class="h-lg m-t-0 m-b-lg text-shadow-grey">
+              Projet 1
+              <a class="btn btn-more" data-toggle="modal" data-target="#ajoutertache"><i class="fa fa-plus"></i>Ajouter une tâche</a>
+          </h1>
+
+          <!--Modal-->
+          <div class="modal fade" id="ajoutertache" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                      <div class="modal-header">
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                              <span aria-hidden="true">&times;</span>
+                          </button>
+                          <h5 class="modal-title" id="exampleModalLabel">Ajouter une tâche</h5>
+                      </div>
+                      <div class="modal-body">
+                          <form accept-charset="UTF-8" role="form">
+                              <fieldset>
+                                  <div class="form-group">
+                                      <div class="input-group input-group-lg">
+                                          <span class="input-group-addon"><i class="fa fa-fw fa-pencil"></i></span>
+                                          <input type="text" class="form-control" placeholder="Nom de la tâche">
+                                      </div>
+                                  </div>
+                                  <div class="form-group">
+                                      <div class="input-group input-group-lg">
+                                          <span class="input-group-addon"><i class="fa fa-fw fa-user"></i></span>
+                                          <select multiple class="form-control">
+                                              <option>Luc</option>
+                                              <option>Eliane</option>
+                                              <option>Valentin</option>
+                                              <option>Henri</option>
+                                          </select>
+                                      </div>
+                                  </div>
+                              </fieldset>
+                          </form>
+                      </div>
+                      <div class="modal-footer">
+                          <input class="btn btn-lg btn-primary btn-block" type="submit" value="Ajouter" data-dismiss="modal">
+                      </div>
+                  </div>
+              </div>
+          </div>
+
+          <div class="row">
+              <div class="col-md-3 text-center">
+                  <div class="panel panel-default panel-pricing panel-pricing-highlighted text-center">
+                      <div class="panel-heading">
+                          <h4 class="panel-title">
+                              Tâche 1
+                          </h4>
+                      </div>
+                      <div class="panel-pricing-price">Ranger sa chambre</div>
+                      <div class="panel-body">
+                          <ul class="list-dotted">
+                              <li>Valentin</li>
+                              <li>Luc</li>
+                              <li>Benoit</li>
+                          </ul>
+                          <a data-toggle="modal" data-target="#modifier" class="btn btn-primary btn-sm">Modifier</a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-3 text-center">
+                  <div class="panel panel-default panel-pricing panel-pricing-highlighted text-center">
+                      <div class="panel-heading">
+                          <h4 class="panel-title">
+                              Tâche 2
+                          </h4>
+                      </div>
+                      <div class="panel-pricing-price">Faire le ménage</div>
+                      <div class="panel-body">
+                          <ul class="list-dotted">
+                              <li>Luc</li>
+                              <li>Eliane</li>
+                          </ul>
+                          <a data-toggle="modal" data-target="#modifier" class="btn btn-primary btn-sm">Modifier</a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-3 text-center">
+                  <div class="panel panel-default panel-pricing panel-pricing-highlighted text-center">
+                      <div class="panel-heading">
+                          <h4 class="panel-title">
+                              Tâche 3
+                          </h4>
+                      </div>
+                      <div class="panel-pricing-price">Faire les courses</div>
+                      <div class="panel-body">
+                          <ul class="list-dotted">
+                              <li>Paul</li>
+                              <li>Henri</li>
+                              <li>Benoit</li>
+                          </ul>
+                          <a data-toggle="modal" data-target="#modifier" class="btn btn-primary btn-sm">Modifier</a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-3 text-center">
+                  <div class="panel panel-default panel-pricing panel-pricing-highlighted text-center">
+                      <div class="panel-heading">
+                          <h4 class="panel-title">
+                              Tâche 4
+                          </h4>
+                      </div>
+                      <div class="panel-pricing-price">Faire le front su site web</div>
+                      <div class="panel-body">
+                          <ul class="list-dotted">
+                              <li>Eliane</li>
+                              <li>Bob</li>
+                          </ul>
+                          <a data-toggle="modal" data-target="#modifier" class="btn btn-primary btn-sm">Modifier</a>
+                      </div>
+                  </div>
+              </div>
+          </div>
       </div>
-    </div>
-    <!--Showcase-->
-    <div class="showcase block">
-      <div class="container">
-        <h2 class="block-title text-shadow-grey">
-            Mes projets
-          </h2>
-        <div class="item-carousel" data-toggle="owlcarousel" data-owlcarousel-settings='{"items":4, "pagination":false, "navigation":true, "itemsScaleUp":true}'>
-          <div class="item">
-            <a href="#" class="overlay-wrapper">
-                <img src="img/showcase/project1.png" alt="Project 1 image" class="img-responsive underlay">
-                <span class="overlay">
-                  <span class="overlay-content"> <span class="h4">Projet 1</span> </span>
-                </span>
-              </a>
-            <div class="item-details bg-noise">
-              <h4 class="item-title">
-                  <a href="#">Projet 1</a>
-                </h4>
-            </div>
-          </div>
-          <div class="item">
-            <a href="#" class="overlay-wrapper">
-                <img src="img/showcase/project2.png" alt="Project 2 image" class="img-responsive underlay">
-                <span class="overlay">
-                  <span class="overlay-content"> <span class="h4">Projet 2</span> </span>
-                </span>
-              </a>
-            <div class="item-details bg-noise">
-              <h4 class="item-title">
-                  <a href="#">Projet 2</a>
-                </h4>
-            </div>
-          </div>
-          <div class="item">
-            <a href="#" class="overlay-wrapper">
-                <img src="img/showcase/project3.png" alt="Project 3 image" class="img-responsive underlay">
-                <span class="overlay">
-                  <span class="overlay-content"> <span class="h4">Projet 3</span> </span>
-                </span>
-              </a>
-            <div class="item-details bg-noise">
-              <h4 class="item-title">
-                  <a href="#">Projet 3</a>
-                </h4>
-            </div>
-          </div>
-          <div class="item">
-            <a href="#" class="overlay-wrapper">
-                <img src="img/showcase/project4.png" alt="Project 4 image" class="img-responsive underlay">
-                <span class="overlay">
-                  <span class="overlay-content"> <span class="h4">Project 4</span> </span>
-                </span>
-              </a>
-            <div class="item-details bg-noise">
-              <h4 class="item-title">
-                  <a href="#">Project 4</a>
-                </h4>
-            </div>
-          </div>
-          <div class="item">
-            <a href="#" class="overlay-wrapper">
-                <img src="img/showcase/project5.png" alt="Project 5 image" class="img-responsive underlay">
-                <span class="overlay">
-                  <span class="overlay-content"> <span class="h4">Projet 5</span> </span>
-                </span>
-              </a>
-            <div class="item-details bg-noise">
-              <h4 class="item-title">
-                  <a href="#">Projet 5</a>
-                </h4>
-            </div>
-          </div>
-          <div class="item">
-            <a href="#" class="overlay-wrapper">
-                <img src="img/showcase/project6.png" alt="Project 6 image" class="img-responsive underlay">
-                <span class="overlay">
-                  <span class="overlay-content"> <span class="h4">Projet 6</span> </span>
-                </span>
-              </a>
-            <div class="item-details bg-noise">
-              <h4 class="item-title">
-                  <a href="#">Projet 6</a>
-                </h4>
-            </div>
-          </div>
-          <div class="item">
-            <a href="#" class="overlay-wrapper">
-                <img src="img/showcase/project7.png" alt="Project 7 image" class="img-responsive underlay">
-                <span class="overlay">
-                  <span class="overlay-content"> <span class="h4">Projet 7</span> </span>
-                </span>
-              </a>
-            <div class="item-details bg-noise">
-              <h4 class="item-title">
-                  <a href="#">Projet 7</a>
-                </h4>
-            </div>
-          </div>
-          <div class="item">
-            <a href="#" class="overlay-wrapper">
-                <img src="img/showcase/project8.png" alt="Project 8 image" class="img-responsive underlay">
-                <span class="overlay">
-                  <span class="overlay-content"> <span class="h4">Projet 8</span> </span>
-                </span>
-              </a>
-            <div class="item-details bg-noise">
-              <h4 class="item-title">
-                  <a href="#">Projet 8</a>
-                </h4>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
   </div>
+
+  <!-- Modal -->
+  <div class="modal fade" id="modifier" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel2">Modifier la tâche</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                  </button>
+              </div>
+              <div class="modal-body">
+                  ...
+              </div>
+              <div class="modal-footer">
+                  <input class="btn btn-lg btn-primary btn-block" type="submit" value="Modifier" data-dismiss="modal">
+              </div>
+          </div>
+      </div>
   </div>
 
   <!-- Required JavaScript Libraries -->
