--- a/ProjetJava/ProjetJava/src/main/resources/templates/test_add_project.html
+++ b/ProjetJava/ProjetJava/src/main/resources/templates/test_add_project.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>test project</title>
 </head>
 <body>
-$END$
+<form >
+    <div class="form-group">
+        <label for="firstname">Nom du projet</label>
+        <input type="text" class="input-lg form-control" id="firstname">
+    </div>
+    <div class="form-group">
+        <label for="surname">Utilisateur</label>
+        <input type="text" id="surname" class="input-lg form-control">
+    </div>
+    <div class="text-right">
+        <button type="submit" class="btn btn-lg btn-primary">Enregistrer</button>
+    </div>
+</form>
 </body>
 </html>
