--- a/ProjetJava/ProjetJava/src/main/resources/templates/test_add_project.html
+++ b/ProjetJava/ProjetJava/src/main/resources/templates/test_add_project.html
@@ -5,14 +5,16 @@
     <title>test project</title>
 </head>
 <body>
-<form >
+<form action="#" th:action="@{/project}" th:object="${project}" method="post">
     <div class="form-group">
-        <label for="firstname">Nom du projet</label>
-        <input type="text" class="input-lg form-control" id="firstname">
+        <label for="nom">Nom du projet</label>
+        <input type="text" class="input-lg form-control" id="nom"
+               th:field="*{nom}" placeholder="Nom">
     </div>
     <div class="form-group">
-        <label for="surname">Utilisateur</label>
-        <input type="text" id="surname" class="input-lg form-control">
+        <label for="worker">Utilisateur</label>
+        <input type="text" id="worker" class="input-lg form-control"
+                placeholder="Utilisateur">
     </div>
     <div class="text-right">
         <button type="submit" class="btn btn-lg btn-primary">Enregistrer</button>
