--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 
 <head>
   <meta charset="utf-8">
@@ -69,10 +69,8 @@
                               <div class="input-group input-group-lg">
                                   <span class="input-group-addon"><i class="fa fa-fw fa-user"></i></span>
                                   <select multiple class="form-control">
-                                      <option>Luc</option>
-                                      <option>Eliane</option>
-                                      <option>Valentin</option>
-                                      <option>Henri</option>
+                                      <option th:each="user : ${data}">
+                                          <td th:text="${user.firstName}"></td></option>
                                   </select>
                               </div>
                           </div>
