--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -48,6 +48,8 @@
             <a data-toggle="modal" data-target="#ajouterprojet" class="btn btn-more"><i class="fa fa-plus"></i>Ajouter un projet</a>
           </h2>
 
+
+
           <!--Modal-->
           <div class="modal fade" id="ajouterprojet" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
               <div class="modal-dialog" role="document">
@@ -58,13 +60,15 @@
                           </button>
                           <h5 class="modal-title" id="exampleModalLabel">Ajouter un projet</h5>
                       </div>
-                      <div class="modal-body">
-                          <div class="form-group">
-                              <div class="input-group input-group-lg">
-                                  <span class="input-group-addon"><i class="fa fa-fw fa-pencil"></i></span>
-                                  <input type="text" class="form-control" placeholder="Nom du projet">
+                      <form action="#" th:action="@{/index}" th:object="${projet}" method="post">
+                          <div class="modal-body">
+                              <div class="form-group">
+                                  <div class="input-group input-group-lg">
+                                      <span class="input-group-addon"><i class="fa fa-fw fa-pencil"></i></span>
+                                      <input type="text" class="input-lg form-control" id="firstname"
+                                             th:field="*{nom}" placeholder="Nom">
+                                  </div>
                               </div>
-                          </div>
                           <div class="form-group">
                               <div class="input-group input-group-lg">
                                   <span class="input-group-addon"><i class="fa fa-fw fa-user"></i></span>
@@ -75,10 +79,34 @@
                                   </select>
                               </div>
                           </div>
-                      </div>
-                      <div class="modal-footer">
-                          <input class="btn btn-lg btn-primary btn-block" type="submit" value="Ajouter" data-dismiss="modal">
-                      </div>
+                          </div>
+                          <div class="text-right modal-footer">
+                              <button type="submit" class="btn btn-lg btn-primary btn-block">Ajouter</button>
+                          </div>
+                      </form>
+                      <!--<form action="#" th:action="@{/index}" th:object="${projet}" method="post">
+                          <div class="modal-body">
+                              <div class="form-group">
+                                  <div class="input-group input-group-lg">
+                                      <span class="input-group-addon"><i class="fa fa-fw fa-pencil"></i></span>
+                                      <input type="text" class="form-control" placeholder="Nom du projet" th:field="*{nom}">
+                                  </div>
+                              </div>
+                              <div class="form-group">
+                                  <div class="input-group input-group-lg">
+                                      <span class="input-group-addon"><i class="fa fa-fw fa-user"></i></span>
+                                      <select multiple class="form-control">
+                                          <option th:each="user : ${datauser}">
+                                              <td th:text="${user.firstName}"></td>
+                                          </option>
+                                      </select>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="modal-footer">
+                              <input class="btn btn-lg btn-primary btn-block" type="submit" value="Ajouter" data-dismiss="modal">
+                          </div>
+                      </form>-->
                   </div>
               </div>
           </div>
