--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 
 <head>
   <meta charset="utf-8">
@@ -51,18 +51,18 @@
                 </h3>
             </div>
             <div class="panel-body">
-              <form accept-charset="UTF-8" role="form">
+              <form accept-charset="UTF-8" role="form" action="#" th:action="@{/login}" th:object="${login}" method="post">
                 <fieldset>
                   <div class="form-group">
                     <div class="input-group input-group-lg">
                       <span class="input-group-addon"><i class="fa fa-fw fa-envelope"></i></span>
-                      <input type="text" class="form-control" placeholder="Email">
+                      <input th:field="*{username}" type="text" class="form-control" placeholder="Email">
                     </div>
                   </div>
                   <div class="form-group">
                     <div class="input-group input-group-lg">
                       <span class="input-group-addon"><i class="fa fa-fw fa-lock"></i></span>
-                      <input type="password" class="form-control" placeholder="Password">
+                      <input th:field="*{password}" type="password" class="form-control" placeholder="Password">
                     </div>
                   </div>
                   <div class="checkbox">
@@ -71,7 +71,7 @@
                         Remember Me
                       </label>
                   </div>
-                  <input class="btn btn-lg btn-primary btn-block" type="submit" value="Login">
+                  <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
                 </fieldset>
               </form>
             </div>
